--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "reepay-checkout-react-native-example",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "eject": "expo eject",
-    "qr": "expo-cli start --tunnel"
+    "start": "npx expo start --dev-client",
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios",
+    "web": "npx expo start --web",
+    "eject": "npx expo prebuild",
+    "qr": "npx expo start --tunnel"
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.4.3",
@@ -17,10 +17,10 @@
     "expo": "^49.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.11",
+    "expo-updates": "~0.18.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
