--- a/package.json
+++ b/package.json
@@ -2,38 +2,38 @@
   "name": "reepay-checkout-react-native-example",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "eject": "expo eject",
-    "qr": "expo-cli start --tunnel"
+    "start": "npx expo start --dev-client",
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios",
+    "web": "npx expo start --web",
+    "eject": "npx expo prebuild",
+    "qr": "npx expo start --tunnel"
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "buffer": "^6.0.3",
-    "expo": "^46.0.0",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.7",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
-    "react-native-webview": "11.23.0",
+    "expo": "^49.0.16",
+    "expo-splash-screen": "^0.10.3",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.16",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@types/react": "~18.0.0",
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.14",
     "@types/react-native": "~0.69.1",
-    "typescript": "^4.6.3"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
