--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "buffer": "^6.0.3",
-    "expo": "^49.0.0",
+    "expo": "^49.0.16",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.16",
@@ -33,7 +33,8 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "~0.69.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@expo/ngrok": "^4.1.0"
   },
   "private": true
 }
