--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "npx expo run:ios",
     "web": "npx expo start --web",
     "eject": "npx expo prebuild",
-    "qr": "npx expo start --tunnel"
+    "tunnel": "npx expo start --tunnel"
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.4.3",
@@ -17,7 +17,7 @@
     "expo": "^49.0.16",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.16",
+    "expo-updates": "~0.18.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
@@ -31,10 +31,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/ngrok": "^4.1.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "~0.69.1",
-    "typescript": "^5.1.3",
-    "@expo/ngrok": "^4.1.0"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
