--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "reepay-checkout-react-native-example",
   "version": "1.0.0",
+  "engines": {
+    "node": "20.10.0"
+  },
   "scripts": {
     "start": "npx expo start --dev-client",
     "android": "npx expo run:android",
@@ -10,6 +13,7 @@
     "tunnel": "npx expo start --tunnel"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -33,7 +37,6 @@
     "@babel/core": "^7.20.0",
     "@expo/ngrok": "^4.1.0",
     "@types/react": "~18.2.14",
-    "@types/react-native": "~0.69.1",
     "typescript": "^5.1.3"
   },
   "private": true
