Add Expo WebBrowser

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
     "react-navigation": "^4.4.4",
-    "expo-clipboard": "~4.3.1"
+    "expo-clipboard": "~4.3.1",
+    "expo-web-browser": "~12.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
