--- a/package.json
+++ b/package.json
@@ -19,21 +19,22 @@
     "@react-navigation/native-stack": "^6.7.0",
     "buffer": "^6.0.3",
     "expo": "^49.0.16",
+    "expo-clipboard": "~4.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-logs": "^5.1.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
-    "react-navigation": "^4.4.4",
-    "expo-clipboard": "~4.3.1",
-    "expo-web-browser": "~12.3.2"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
