--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "tunnel": "npx expo start --tunnel"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.12.52",
+    "@expo/webpack-config": "~19.0.1",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "buffer": "^6.0.3",
-    "expo": "^51.0.2",
+    "expo": "^51.0.17",
     "expo-clipboard": "~6.0.3",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
@@ -26,7 +26,7 @@
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-logs": "^5.1.0",
     "react-native-reanimated": "~3.10.1",
