--- a/package.json
+++ b/package.json
@@ -13,24 +13,25 @@
     "tunnel": "npx expo start --tunnel"
   },
   "dependencies": {
-    "@expo/webpack-config": "~19.0.1",
+    "@expo/webpack-config": "^19.0.1",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "buffer": "^6.0.3",
-    "expo": "^51.0.17",
+    "expo": "~51.0.31",
     "expo-clipboard": "~6.0.3",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.11",
+    "expo-updates": "~0.25.24",
     "expo-web-browser": "~13.0.3",
+    "query-string": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-logs": "^5.1.0",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
