--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "buffer": "^6.0.3",
-    "expo": "~51.0.31",
+    "expo": "^51.0.38",
     "expo-clipboard": "~6.0.3",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.24",
+    "expo-updates": "~0.25.27",
     "expo-web-browser": "~13.0.3",
     "query-string": "^9.0.0",
     "react": "18.2.0",
